--- a/training/fine-tune-embedding-model-for-rag.ipynb
+++ b/training/fine-tune-embedding-model-for-rag.ipynb
@@ -66,10 +66,7 @@
    "source": [
     "from huggingface_hub import login\n",
     "\n",
-    "login(\n",
-    "  token=\"\", # ADD YOUR TOKEN HERE\n",
-    "  add_to_git_credential=True\n",
-    ")\n"
+    "login(token=\"\", add_to_git_credential=True)  # ADD YOUR TOKEN HERE"
    ]
   },
   {
@@ -115,14 +112,16 @@
     "# Load dataset from the hub\n",
     "dataset = load_dataset(\"philschmid/finanical-rag-embedding-dataset\", split=\"train\")\n",
     "\n",
-    "# rename columns \n",
+    "# rename columns\n",
     "dataset = dataset.rename_column(\"question\", \"anchor\")\n",
     "dataset = dataset.rename_column(\"context\", \"positive\")\n",
     "\n",
+    "\n",
     "# Create an ID column\n",
     "def add_id_column(sample, idx):\n",
-    "    sample['id'] = idx\n",
+    "    sample[\"id\"] = idx\n",
     "    return sample\n",
+    "\n",
     "\n",
     "# Map the function to the dataset\n",
     "dataset = dataset.map(add_id_column, with_indices=True)\n",
@@ -130,7 +129,7 @@
     "# split dataset into a 10% test set\n",
     "dataset = dataset.train_test_split(test_size=0.1)\n",
     "\n",
-    "# save datasets to disk \n",
+    "# save datasets to disk\n",
     "dataset[\"train\"].to_json(\"train_dataset.json\", orient=\"records\")\n",
     "dataset[\"test\"].to_json(\"test_dataset.json\", orient=\"records\")"
    ]
@@ -158,26 +157,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch \n",
+    "import torch\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "from sentence_transformers.evaluation import InformationRetrievalEvaluator, SequentialEvaluator\n",
+    "from sentence_transformers.evaluation import (\n",
+    "    InformationRetrievalEvaluator,\n",
+    "    SequentialEvaluator,\n",
+    ")\n",
     "from sentence_transformers.util import cos_sim\n",
     "from datasets import load_dataset, concatenate_datasets\n",
     "\n",
-    "model_id = \"BAAI/bge-base-en-v1.5\" # Hugging Face model ID\n",
-    "matryoshka_dimensions = [768, 512, 256, 128, 64] # important order is reversed\n",
+    "model_id = \"BAAI/bge-base-en-v1.5\"  # Hugging Face model ID\n",
+    "matryoshka_dimensions = [768, 512, 256, 128, 64]  # important order is reversed\n",
     "\n",
     "# Load a model\n",
-    "model = SentenceTransformer(model_id, device=\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = SentenceTransformer(\n",
+    "    model_id, device=\"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    ")\n",
     "\n",
     "# load test dataset\n",
-    "test_dataset = load_dataset(\"json\", data_files=\"test_dataset.json\",split=\"train\")\n",
-    "train_dataset = load_dataset(\"json\", data_files=\"train_dataset.json\",split=\"train\")\n",
-    "corpus_dataset = concatenate_datasets([train_dataset,test_dataset])\n",
+    "test_dataset = load_dataset(\"json\", data_files=\"test_dataset.json\", split=\"train\")\n",
+    "train_dataset = load_dataset(\"json\", data_files=\"train_dataset.json\", split=\"train\")\n",
+    "corpus_dataset = concatenate_datasets([train_dataset, test_dataset])\n",
     "\n",
     "# Convert the datasets to dictionaries\n",
-    "corpus = dict(zip(corpus_dataset[\"id\"], corpus_dataset[\"positive\"]))  # Our corpus (cid => document)\n",
-    "queries = dict(zip(test_dataset[\"id\"], test_dataset[\"anchor\"]))  # Our queries (qid => question)\n",
+    "corpus = dict(\n",
+    "    zip(corpus_dataset[\"id\"], corpus_dataset[\"positive\"])\n",
+    ")  # Our corpus (cid => document)\n",
+    "queries = dict(\n",
+    "    zip(test_dataset[\"id\"], test_dataset[\"anchor\"])\n",
+    ")  # Our queries (qid => question)\n",
     "\n",
     "# Create a mapping of relevant document (1 in our case) for each query\n",
     "relevant_docs = {}  # Query ID to relevant documents (qid => set([relevant_cids])\n",
@@ -188,15 +196,15 @@
     "matryoshka_evaluators = []\n",
     "# Iterate over the different dimensions\n",
     "for dim in matryoshka_dimensions:\n",
-    "  ir_evaluator = InformationRetrievalEvaluator(\n",
-    "      queries=queries,\n",
-    "      corpus=corpus,\n",
-    "      relevant_docs=relevant_docs,\n",
-    "      name=f\"basline_{dim}\",\n",
-    "      truncate_dim=dim, # Truncate the embeddings to a certain dimension\n",
-    "      score_functions={\"cosine\": cos_sim}\n",
-    ")\n",
-    "  matryoshka_evaluators.append(ir_evaluator)\n",
+    "    ir_evaluator = InformationRetrievalEvaluator(\n",
+    "        queries=queries,\n",
+    "        corpus=corpus,\n",
+    "        relevant_docs=relevant_docs,\n",
+    "        name=f\"basline_{dim}\",\n",
+    "        truncate_dim=dim,  # Truncate the embeddings to a certain dimension\n",
+    "        score_functions={\"cosine\": cos_sim},\n",
+    "    )\n",
+    "    matryoshka_evaluators.append(ir_evaluator)\n",
     "\n",
     "# Create a sequential evaluator\n",
     "evaluator = SequentialEvaluator(matryoshka_evaluators)"
@@ -223,9 +231,9 @@
     "\n",
     "# Print the main score\n",
     "for dim in matryoshka_dimensions:\n",
-    "  key=f\"basline_{dim}_cosine_ndcg@10\"\n",
-    "  print\n",
-    "  print(f\"{key}: {results[key]}\")\n"
+    "    key = f\"basline_{dim}_cosine_ndcg@10\"\n",
+    "    print\n",
+    "    print(f\"{key}: {results[key]}\")"
    ]
   },
   {
@@ -266,7 +274,7 @@
    "source": [
     "from sentence_transformers import SentenceTransformerModelCardData, SentenceTransformer\n",
     "\n",
-    "model_id = \"BAAI/bge-base-en-v1.5\" # Hugging Face model ID\n",
+    "model_id = \"BAAI/bge-base-en-v1.5\"  # Hugging Face model ID\n",
     "\n",
     "# load model with SDPA for using Flash Attention 2\n",
     "model = SentenceTransformer(\n",
@@ -276,8 +284,8 @@
     "        language=\"en\",\n",
     "        license=\"apache-2.0\",\n",
     "        model_name=\"BGE base Financial Matryoshka\",\n",
-    "    )\n",
-    ")\n"
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -295,9 +303,11 @@
    "source": [
     "from sentence_transformers.losses import MatryoshkaLoss, MultipleNegativesRankingLoss\n",
     "\n",
-    "matryoshka_dimensions = [768, 512, 256, 128, 64] # important order is reversed\n",
+    "matryoshka_dimensions = [768, 512, 256, 128, 64]  # important order is reversed\n",
     "inner_train_loss = MultipleNegativesRankingLoss(model)\n",
-    "train_loss = MatryoshkaLoss(model, inner_train_loss, matryoshka_dims=matryoshka_dimensions)"
+    "train_loss = MatryoshkaLoss(\n",
+    "    model, inner_train_loss, matryoshka_dims=matryoshka_dimensions\n",
+    ")"
    ]
   },
   {
@@ -321,28 +331,28 @@
     "from sentence_transformers.training_args import BatchSamplers\n",
     "\n",
     "# load train dataset again\n",
-    "train_dataset = load_dataset(\"json\", data_files=\"train_dataset.json\",split=\"train\")\n",
+    "train_dataset = load_dataset(\"json\", data_files=\"train_dataset.json\", split=\"train\")\n",
     "\n",
     "# define training arguments\n",
     "args = SentenceTransformerTrainingArguments(\n",
-    "    output_dir=\"bge-base-financial-matryoshka\",\n",
-    "    num_train_epochs=4,\n",
-    "    per_device_train_batch_size=32,\n",
-    "    gradient_accumulation_steps=16, # for a global batch size of 512\n",
-    "    per_device_eval_batch_size=16,\n",
-    "    warmup_ratio=0.1,\n",
-    "    learning_rate=2e-5,\n",
-    "    lr_scheduler_type=\"cosine\",           # use constant learning rate scheduler\n",
-    "    optim=\"adamw_torch_fused\",              # use fused adamw optimizer\n",
-    "    tf32=True,                              # use tf32 precision\n",
-    "    bf16=True,  # Set to True if you have a GPU that supports BF16\n",
+    "    output_dir=\"bge-base-financial-matryoshka\", # output directory and hugging face model ID\n",
+    "    num_train_epochs=4,                         # number of epochs\n",
+    "    per_device_train_batch_size=32,             # train batch size\n",
+    "    gradient_accumulation_steps=16,             # for a global batch size of 512\n",
+    "    per_device_eval_batch_size=16,              # evaluation batch size\n",
+    "    warmup_ratio=0.1,                           # warmup ratio\n",
+    "    learning_rate=2e-5,                         # learning rate, 2e-5 is a good value\n",
+    "    lr_scheduler_type=\"cosine\",                 # use constant learning rate scheduler\n",
+    "    optim=\"adamw_torch_fused\",                  # use fused adamw optimizer\n",
+    "    tf32=True,                                  # use tf32 precision\n",
+    "    bf16=True,                                  # use bf16 precision\n",
     "    batch_sampler=BatchSamplers.NO_DUPLICATES,  # MultipleNegativesRankingLoss benefits from no duplicate samples in a batch\n",
-    "    eval_strategy=\"epoch\",\n",
-    "    save_strategy=\"epoch\",\n",
-    "    logging_steps=10,\n",
-    "    save_total_limit=3,\n",
-    "    load_best_model_at_end=True, # load the best model when training ends\n",
-    "    metric_for_best_model=\"eval_basline_128_cosine_ndcg@10\", # Optimizing for the best map@100 score for the 128 dimension\n",
+    "    eval_strategy=\"epoch\",                      # evaluate after each epoch\n",
+    "    save_strategy=\"epoch\",                      # save after each epoch\n",
+    "    logging_steps=10,                           # log every 10 steps\n",
+    "    save_total_limit=3,                         # save only the last 3 models\n",
+    "    load_best_model_at_end=True,                # load the best model when training ends\n",
+    "    metric_for_best_model=\"eval_basline_128_cosine_ndcg@10\",  # Optimizing for the best ndcg@10 score for the 128 dimension\n",
     ")"
    ]
   },
@@ -363,8 +373,10 @@
     "\n",
     "trainer = SentenceTransformerTrainer(\n",
     "    model=model, # bg-base-en-v1\n",
-    "    args=args, # training arguments\n",
-    "    train_dataset=train_dataset.select_columns(['positive', 'anchor']), # training dataset\n",
+    "    args=args,  # training arguments\n",
+    "    train_dataset=train_dataset.select_columns(\n",
+    "        [\"positive\", \"anchor\"]\n",
+    "    ),  # training dataset\n",
     "    loss=train_loss,\n",
     "    evaluator=evaluator,\n",
     ")"
@@ -387,7 +399,7 @@
     "# start training, the model will be automatically saved to the hub and the output directory\n",
     "trainer.train()\n",
     "\n",
-    "# save the best model \n",
+    "# save the best model\n",
     "trainer.save_model()\n",
     "\n",
     "# push model to hub\n",
@@ -418,7 +430,9 @@
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "fine_tuned_model = SentenceTransformer(args.output_dir, device=\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "fine_tuned_model = SentenceTransformer(\n",
+    "    args.output_dir, device=\"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    ")\n",
     "# Evaluate the model\n",
     "results = evaluator(fine_tuned_model)\n",
     "\n",
@@ -427,8 +441,8 @@
     "\n",
     "# Print the main score\n",
     "for dim in matryoshka_dimensions:\n",
-    "  key=f\"basline_{dim}_cosine_ndcg@10\"\n",
-    "  print(f\"{key}: {results[key]}\")"
+    "    key = f\"basline_{dim}_cosine_ndcg@10\"\n",
+    "    print(f\"{key}: {results[key]}\")"
    ]
   },
   {
