--- a/training/fine-tune-embedding-model-for-rag.ipynb
+++ b/training/fine-tune-embedding-model-for-rag.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "For us the most important metric will be Normalized Discounted Cumulative Gain (NDCG) as it is a measure of ranking quality. It takes into account the position of the relevant document in the ranking and discounts it. The discounted value is logarithmic, which means that relevant documents are more important if they are ranked higher.\n",
     "\n",
-    "This means that we will use \"all\" context from the train and test split as potential corpus and then evaluate the performance of the model on the test split queries. As mentioned in the beginning we are going to use Matryoshka Representation Learning to boost efficiency. We are going to create a baseline for the following dimensions `128`, `256`, `512`, `768`. Since those are the dimensions we are going to use for our Matryoshka Representation Learning."
+    "For our evaluation corpus we will use all \"documents\" for potential retrieval from the train and test split and the queries from the test set. As mentioned in the beginning we are going to use Matryoshka Representation Learning to boost efficiency. We are going to create a baseline for the following dimensions `64`, `128`, `256`, `512`, `768`. Since those are the dimensions we are going to use for our Matryoshka Representation Learning."
    ]
   },
   {
@@ -318,9 +318,9 @@
    "source": [
     "## 4. Fine-tune embedding model with `SentenceTransformersTrainer`\n",
     "\n",
-    "We are now ready to fine-tune our model. We will use the [SentenceTransformersTrainer](https://sbert.net/docs/package_reference/sentence_transformer/trainer.html#sentencetransformertrainer) a subclass of the `Trainer` from the `transformers` library and supports all the same features, including logging, evaluation, and checkpointing. \n",
+    "We are now ready to fine-tune our model. We will use the [SentenceTransformersTrainer](https://sbert.net/docs/package_reference/sentence_transformer/trainer.html#sentencetransformertrainer) a subclass of the `Trainer` from the `transformers` library, which supports all the same features, including logging, evaluation, and checkpointing. \n",
     "\n",
-    "In addition to this there is a `SentenceTransformerTrainingArguments` class that allows you to specify all the training parameters."
+    "In addition to this there is a `SentenceTransformerTrainingArguments` class that allows us to specify all the training parameters."
    ]
   },
   {
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Start training our model by calling the `train()` method on our `SentenceTransformerTrainer` instance. This will start the training loop and train our model for 3 epochs. "
+    "Start training our model by calling the `train()` method on our `SentenceTransformerTrainer` instance. This will start the training loop and train our model for 4 epochs. "
    ]
   },
   {
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our fine-tuned achieved the following scores:\n",
+    "Our fine-tuned model achieves:\n",
     "- dim 768: `0.8253652077429072`\n",
     "- dim 512: `0.8274643684492735`\n",
     "- dim 256: `0.8230326345640168`\n",
@@ -460,20 +460,21 @@
     "\n",
     "Lets put this into a table and compare the performance of our fine-tuned model against the baseline.\n",
     "\n",
-    "| Dimension | Baseline | Fine-tuned |\n",
-    "|-----------|----------|------------|\n",
-    "| 768       | 0.7684 | 0.8254 |\n",
-    "| 512       | 0.7643 | 0.8275 |\n",
-    "| 256       | 0.7546 | 0.8230 |\n",
-    "| 128       | 0.7234 | 0.8184 |\n",
-    "| 64        | 0.6440 | 0.7892 |\n",
+    "| Dimension | Baseline | Fine-tuned | Improvement |\n",
+    "|-----------|----------|------------| ----------- |\n",
+    "| 768       | 0.7684 | 0.8254 | 7.42% |\n",
+    "| 512       | 0.7643 | 0.8275 | 8.27% |\n",
+    "| 256       | 0.7546 | 0.8230 | 9.06% |\n",
+    "| 128       | 0.7234 | 0.8184 | 13.13% |\n",
+    "| 64        | 0.6440 | 0.7892 | 22.55% |\n",
     "\n",
     "Lets try to understand this: \n",
     "* Fine-tuned model outperforms the baseline model in all dimensions. \n",
+    "* BGE base is already a very strong base model but fine-tuning it on only 6.3k samples still improves performance by ~7.4%.\n",
     "* Matryoshka representation learning works and keeps 95% performance at 64 dimensions (12x size reduction), 99% at 128 dimensions (7x site reduction), >99.5% at 256 dimensions (3x size reduction). \n",
-    "* Fine-tuned model with lowest dimension (64) outperforms the baseline model with highest dimensions (768). \n",
-    "* BGE base is already a very strong base model but fine-tuning it on only 6.3k samples still improves performance by ~6%.\n",
+    "* The Fine-tuned model with lowest dimension (64) outperforms the baseline model with highest dimensions (768). \n",
     "* Optimizing the model dimension of 128 allows us to keep 99% of the performance of the 768 dimension model but reducing the storing cost by 6x and improving the cosine similarity search. \n",
+    "* The fine-tuned model with 128 dimensions outperforms the baseline model with 768 dimensions by 6.51%, while being 6x smaller.\n",
     "\n"
    ]
   },
@@ -485,7 +486,7 @@
     "\n",
     "Embedding models are crucial for successfull RAG applications, since if you don't retrieve the right context you can't generate the right answer. Customizing embedding models for domain-specific data can improve retrieval performance significantly compared to using general knowledge models. Fine-tuning embedding models has become highly accessible, and using synthetic data generated by LLMs, one can easily customize models for specific needs, resulting in substantial improvements.\n",
     "\n",
-    "Our results show that fine-tuning can boost performance by ~6% with minimal cost. For instance, training a model on 6.3k samples took just over three minutes and cost only $0.07. By leveraging modern techniques like Matryoshka Representation Learning, we can achieve over 99% performance retention with 7x storage reduction and efficiency gains."
+    "Our results show that fine-tuning can boost performance by ~7% only 6.3k sample. The training took 3 minutes on a consumer size GPU and by leveraging modern techniques like Matryoshka Representation Learning we achieved over 99% performance retention with 6x storage reduction and efficiency gains."
    ]
   },
   {
