--- a/training/fine-tune-embedding-model-for-rag.ipynb
+++ b/training/fine-tune-embedding-model-for-rag.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we can get started we need to install Hugging Face Libraries and Pyroch, including Sentence Transformers, transformers and datasets."
+    "Before we can get started we need to install Hugging Face Libraries and Pytorch, including Sentence Transformers, transformers and datasets."
    ]
   },
   {
@@ -118,15 +118,8 @@
     "dataset = dataset.rename_column(\"question\", \"anchor\")\n",
     "dataset = dataset.rename_column(\"context\", \"positive\")\n",
     "\n",
-    "\n",
-    "# Create an ID column\n",
-    "def add_id_column(sample, idx):\n",
-    "    sample[\"id\"] = idx\n",
-    "    return sample\n",
-    "\n",
-    "\n",
-    "# Map the function to the dataset\n",
-    "dataset = dataset.map(add_id_column, with_indices=True)\n",
+    "# Add an id column to the dataset\n",
+    "dataset = dataset.add_column(\"id\", range(len(dataset)))\n",
     "\n",
     "# split dataset into a 10% test set\n",
     "dataset = dataset.train_test_split(test_size=0.1)\n",
@@ -169,7 +162,7 @@
     "from datasets import load_dataset, concatenate_datasets\n",
     "\n",
     "model_id = \"BAAI/bge-base-en-v1.5\"  # Hugging Face model ID\n",
-    "matryoshka_dimensions = [768, 512, 256, 128, 64]  # important order is reversed\n",
+    "matryoshka_dimensions = [768, 512, 256, 128, 64] # Important: large to small\n",
     "\n",
     "# Load a model\n",
     "model = SentenceTransformer(\n",
@@ -202,7 +195,7 @@
     "        queries=queries,\n",
     "        corpus=corpus,\n",
     "        relevant_docs=relevant_docs,\n",
-    "        name=f\"basline_{dim}\",\n",
+    "        name=f\"dim_{dim}\",\n",
     "        truncate_dim=dim,  # Truncate the embeddings to a certain dimension\n",
     "        score_functions={\"cosine\": cos_sim},\n",
     "    )\n",
@@ -233,7 +226,7 @@
     "\n",
     "# Print the main score\n",
     "for dim in matryoshka_dimensions:\n",
-    "    key = f\"basline_{dim}_cosine_ndcg@10\"\n",
+    "    key = f\"dim_{dim}_cosine_ndcg@10\"\n",
     "    print\n",
     "    print(f\"{key}: {results[key]}\")"
    ]
@@ -276,7 +269,8 @@
    "source": [
     "from sentence_transformers import SentenceTransformerModelCardData, SentenceTransformer\n",
     "\n",
-    "model_id = \"BAAI/bge-base-en-v1.5\"  # Hugging Face model ID\n",
+    "# Hugging Face model ID: https://huggingface.co/BAAI/bge-base-en-v1.5\n",
+    "model_id = \"BAAI/bge-base-en-v1.5\"\n",
     "\n",
     "# load model with SDPA for using Flash Attention 2\n",
     "model = SentenceTransformer(\n",
@@ -305,7 +299,7 @@
    "source": [
     "from sentence_transformers.losses import MatryoshkaLoss, MultipleNegativesRankingLoss\n",
     "\n",
-    "matryoshka_dimensions = [768, 512, 256, 128, 64]  # important order is reversed\n",
+    "matryoshka_dimensions = [768, 512, 256, 128, 64]  # Important: large to small\n",
     "inner_train_loss = MultipleNegativesRankingLoss(model)\n",
     "train_loss = MatryoshkaLoss(\n",
     "    model, inner_train_loss, matryoshka_dims=matryoshka_dimensions\n",
@@ -354,7 +348,7 @@
     "    logging_steps=10,                           # log every 10 steps\n",
     "    save_total_limit=3,                         # save only the last 3 models\n",
     "    load_best_model_at_end=True,                # load the best model when training ends\n",
-    "    metric_for_best_model=\"eval_basline_128_cosine_ndcg@10\",  # Optimizing for the best ndcg@10 score for the 128 dimension\n",
+    "    metric_for_best_model=\"eval_dim_128_cosine_ndcg@10\",  # Optimizing for the best ndcg@10 score for the 128 dimension\n",
     ")"
    ]
   },
@@ -443,7 +437,7 @@
     "\n",
     "# Print the main score\n",
     "for dim in matryoshka_dimensions:\n",
-    "    key = f\"basline_{dim}_cosine_ndcg@10\"\n",
+    "    key = f\"dim_{dim}_cosine_ndcg@10\"\n",
     "    print(f\"{key}: {results[key]}\")"
    ]
   },
@@ -471,7 +465,7 @@
     "Lets try to understand this: \n",
     "* Fine-tuned model outperforms the baseline model in all dimensions. \n",
     "* BGE base is already a very strong base model but fine-tuning it on only 6.3k samples still improves performance by ~7.4%.\n",
-    "* Matryoshka representation learning works and keeps 95% performance at 64 dimensions (12x size reduction), 99% at 128 dimensions (7x site reduction), >99.5% at 256 dimensions (3x size reduction). \n",
+    "* Matryoshka representation learning works and keeps 95% performance at 64 dimensions (12x size reduction), 99% at 128 dimensions (7x size reduction), >99.5% at 256 dimensions (3x size reduction). \n",
     "* The Fine-tuned model with lowest dimension (64) outperforms the baseline model with highest dimensions (768). \n",
     "* Optimizing the model dimension of 128 allows us to keep 99% of the performance of the 768 dimension model but reducing the storing cost by 6x and improving the cosine similarity search. \n",
     "* The fine-tuned model with 128 dimensions outperforms the baseline model with 768 dimensions by 6.51%, while being 6x smaller.\n",
@@ -486,7 +480,7 @@
     "\n",
     "Embedding models are crucial for successfull RAG applications, since if you don't retrieve the right context you can't generate the right answer. Customizing embedding models for domain-specific data can improve retrieval performance significantly compared to using general knowledge models. Fine-tuning embedding models has become highly accessible, and using synthetic data generated by LLMs, one can easily customize models for specific needs, resulting in substantial improvements.\n",
     "\n",
-    "Our results show that fine-tuning can boost performance by ~7% only 6.3k sample. The training took 3 minutes on a consumer size GPU and by leveraging modern techniques like Matryoshka Representation Learning we achieved over 99% performance retention with 6x storage reduction and efficiency gains."
+    "Our results show that fine-tuning can boost performance by ~7% with only 6.3k sample. The training took 3 minutes on a consumer size GPU and by leveraging modern techniques like Matryoshka Representation Learning we achieved over 99% performance retention with 6x storage reduction and efficiency gains."
    ]
   },
   {
