--- a/training/train-llama-31-405b-qlora.ipynb
+++ b/training/train-llama-31-405b-qlora.ipynb
@@ -44,10 +44,10 @@
    "outputs": [],
    "source": [
     "# Install Pytorch for FSDP and FA/SDPA\n",
-    "%pip install \"torch==2.2.2\" tensorboard\n",
+    "%pip install \"torch==2.3.*\" tensorboard\n",
     "# Install Hugging Face libraries\n",
-    "%pip install  --upgrade \"transformers==4.43.2\" \"datasets==2.20.0\" \"accelerate==0.33.0\" \"evaluate==0.4.1\" \"bitsandbytes==0.43.3\" \"huggingface_hub==0.24.2\" \"trl==0.9.6\" \"peft==0.12.0\" \n",
-    "%pip install --upgrade git+https://github.com/huggingface/transformers@64751e54e0f64aeb483fdf7bb109e39cdefdc21b"
+    "%pip install  --upgrade \"transformers==4.43.2\" \"datasets==2.20.0\" \"accelerate==0.33.0\" \"evaluate==0.4.1\" \"bitsandbytes==0.43.2\" \"huggingface_hub==0.24.2\" \"trl==0.9.6\" \"peft==0.12.0\" \n",
+    "%pip install --upgrade git+https://github.com/huggingface/transformers@64751e54e0f64aeb483fdf7bb109e39cdefdc21b \"bitsandbytes==0.43.3\"\n"
    ]
   },
   {
