--- a/training/train-llama-31-405b-qlora.ipynb
+++ b/training/train-llama-31-405b-qlora.ipynb
@@ -44,10 +44,12 @@
    "outputs": [],
    "source": [
     "# Install Pytorch for FSDP and FA/SDPA\n",
-    "%pip install \"torch==2.3.*\" tensorboard\n",
+    "%pip install torch tensorboard\n",
+    "# !ltt install torch --pytorch-computation-backend=cu121\n",
     "# Install Hugging Face libraries\n",
-    "%pip install  --upgrade \"transformers==4.43.2\" \"datasets==2.20.0\" \"accelerate==0.33.0\" \"evaluate==0.4.1\" \"bitsandbytes==0.43.2\" \"huggingface_hub==0.24.2\" \"trl==0.9.6\" \"peft==0.12.0\" \n",
-    "%pip install --upgrade git+https://github.com/huggingface/transformers@64751e54e0f64aeb483fdf7bb109e39cdefdc21b \"bitsandbytes==0.43.3\"\n"
+    "%pip install  --upgrade \"transformers==4.44.0\" \"datasets==2.21.0\" \"accelerate==0.33.0\" \"evaluate==0.4.1\" \"bitsandbytes==0.43.3\" \"huggingface_hub==0.24.2\" \"trl==0.9.6\" \"peft==0.12.0\" \"hf_transfer==0.1.8\" \"flash-attn==2.6.3\"\n",
+    "# if your are running on AWS cluster you might need to update the nccl version\n",
+    "%pip install nvidia-nccl-cu12==2.22.3 --upgrade"
    ]
   },
   {
@@ -87,9 +89,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2ea7e133bc24f4997563a4650301298",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating json from Arrow format:   0%|          | 0/10 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6839a84892641c5bf9a007c46a71801",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating json from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "784047"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -138,29 +179,40 @@
     "\n",
     "_Note: We are using an Anthropic/Vicuna like Chat Template with `User:` and `Assistant:` roles. This done because the special tokens in base Llama 3 (`<|begin_of_text|>` or `<|reserved_special_token_XX|>`) are not trained. Meaning if want would like to use them for the template we need to train them which requires more memory, since we need to update the embedding layer and lm_head. If you have access to more compute you can modify `LLAMA_3_CHAT_TEMPLATE` in the [run_fsdp_qlora.py](./scripts/run_fsdp_qlora.py) script._\n",
     "\n",
-    "For configuration we use the new `TrlParser`, that allows us to provide hyperparameters in a yaml file or overwrite the arguments from the config file by explicitly passing them to the CLI, e.g. `--num_epochs 10`."
+    "For configuration we use the new `TrlParser`, that allows us to provide hyperparameters in a yaml file or overwrite the arguments from the config file by explicitly passing them to the CLI, e.g. `--num_epochs 10`.\n",
+    "\n",
+    "_Note: The config below is optimized for 8x H100 80GBs, you can also fine-tune Llama 3.1 405B on 4x H100. Therefore change the `per_device_train_batch_size` to `2`. With a `max_seq_len` of `2048` this should lead to ~64GB per GPU._ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting llama_31_405b_fsdp_qlora.yaml\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile llama_31_405b_fsdp_qlora.yaml\n",
     "# script parameters\n",
     "model_id: \"meta-llama/Meta-Llama-3.1-405B\" # Hugging Face model id\n",
+    "# model_id: \"hugging-quants/Meta-Llama-3.1-405B-BNB-NF4-BF16\" # Hugging Face model id\n",
     "dataset_path: \".\"                      # path to dataset\n",
-    "max_seq_len:  1024              # max sequence length for model and packing of the dataset\n",
+    "max_seq_len:  2048                     # max sequence length for model and packing of the dataset\n",
     "# training parameters\n",
     "output_dir: \"./llama-31-405b-hf-no-robot\" # Temporary output directory for model checkpoints\n",
     "report_to: \"tensorboard\"               # report metrics to tensorboard\n",
-    "learning_rate: 0.0002                  # learning rate 2e-4\n",
+    "learning_rate: 2.0e-4                  # learning rate 2.0e-4\n",
     "lr_scheduler_type: \"constant\"          # learning rate scheduler\n",
     "num_train_epochs: 3                    # number of training epochs\n",
-    "per_device_train_batch_size: 1         # batch size per device during training\n",
+    "per_device_train_batch_size: 2         # batch size per device during training\n",
     "per_device_eval_batch_size: 1          # batch size for evaluation\n",
-    "gradient_accumulation_steps: 1         # number of steps before performing a backward/update pass\n",
+    "gradient_accumulation_steps: 2         # number of steps before performing a backward/update pass\n",
     "optim: adamw_torch                     # use torch adamw optimizer\n",
     "logging_steps: 10                      # log every 10 steps\n",
     "save_strategy: epoch                   # save checkpoint every epoch\n",
@@ -169,14 +221,7 @@
     "warmup_ratio: 0.03                     # warmup ratio\n",
     "bf16: true                             # use bfloat16 precision\n",
     "tf32: true                             # use tf32 precision\n",
-    "gradient_checkpointing: false          # we use activation_checkpointing instead\n",
-    "# # FSDP parameters: https://huggingface.co/docs/transformers/main/en/fsdp\n",
-    "# fsdp: \"full_shard auto_wrap offload\" # remove offload if enough GPU memory\n",
-    "# fsdp_config:\n",
-    "#   backward_prefetch: \"backward_pre\"\n",
-    "#   forward_prefetch: \"false\"\n",
-    "#   use_orig_params: \"false\"\n",
-    "#   activation_checkpointing: \"true\" # gradient checkpointing"
+    "gradient_checkpointing: true           # we use activation_checkpointing instead"
    ]
   },
   {
@@ -190,51 +235,6 @@
     "_Note: To NOT CPU offloading you need to change the value of `fsdp` and remove `offload`. This only works on > 40GB GPUs since it requires more memory._\n",
     "\n",
     "Now, lets launch the training with the following command:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2948b48b65ee4685890755f1bf7861e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/1.36k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from transformers import AutoConfig \n",
-    "config = AutoConfig.from_pretrained(\"hugging-quants/Meta-Llama-3.1-405B-BNB-NF4-BF16\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bfloat16'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config.quantization_config[\"bnb_4bit_compute_dtype\"]"
    ]
   },
   {
@@ -271,15 +271,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "!HF_HUB_ENABLE_HF_TRANSFER=1  HF_HUB_CACHE=/scratch/.cache/ accelerate launch --config_file /fsx/philipp/deep-learning-pytorch-huggingface/training/configs/fsdp_qlora.yaml ./scripts/run_fsdp_qlora.py --config llama_31_405b_fsdp_qlora.yaml"
+    "HF_HUB_ENABLE_HF_TRANSFER=1  HF_HUB_CACHE=/scratch/.cache/ accelerate launch --config_file ./configs/fsdp_qlora.yaml ./scripts/run_fsdp_qlora.py --config llama_31_405b_fsdp_qlora.yaml!"
    ]
   },
   {
@@ -441,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4,
   "vscode": {
